--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
 
     <div class="box">
-        <h1>Checker</h1>
+        <h1>Even-Odd Checker</h1>
         <input type="number" id="num" placeholder="Enter number">
         <br>
         <button onclick="check()">Check</button>
