--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
     <div class="box">
         <h1>Even-Odd Checker</h1>
-        <input type="number" id="num" placeholder="Enter number">
+        <input type="number" id="num" placeholder="Enter number">. 
+        <!-- type="number" -->
         <br>
         <button onclick="check()">Check</button>
         <h2 id="msg"></h2>
